<resources>
    <string name="app_name">Foodie</string>
    <string name="have_account_text">Already have an account ?</string>
    <string name="login_text">Login</string>
    <string name="policy_text"><![CDATA[By signing up, you agree to our terms & conditions and privacy policy]]></string>
    <string name="text_button_email">Continue with Email</string>
    <string name="text_button_google">Continue with Google</string>
    <string name="text_button_guest">Continue as Guest</string>
    <string name="sign_up_now_text">Sign Up Now</string>
    <string name="slogan_text">Build a better meal plan to achieve your health and fitness</string>
    <string name="text_have_not_an_account">Do not have an account ?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="cancel_text">Cancel</string>
    <string name="text_connect">You can connect with...</string>
    <string name="text_login">Login</string>
    <string name="checkbox_remember_me">Remember me and keep me logged in</string>
    <string name="forgot_password_textview">Forgot password ?</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_enter_email_address">Enter Email Address</string>
    <string name="textview_login_to_account">Login your account to continue with foodie to achieve your goals</string>
    <string name="login_background">Login Background</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keep_me_logged_in">Keep me Logged in</string>
    <string name="enter_name">Enter Name</string>
    <string name="favourites_tv">Favourites</string>
    <string name="title_tv">Title</string>
    <string name="description_tv">Description</string>
    <string name="my_plans_tv">My Plans</string>
    <string name="saturday_tv">Saturday</string>
    <string name="sunday_tv">Sunday</string>
    <string name="monday_tv">Monday</string>
    <string name="tuesday_tv">Tuesday</string>
    <string name="wednesday_tv">Wednesday</string>
    <string name="thursday_tv">Thursday</string>
    <string name="friday_tv">Friday</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="more_you_might_like">More You Might Like...</string>
    <string name="txt1">Make Your Every Day Recipe</string>
    <string name="txt2">Preparing Meals in Advance</string>
    <string name="txt3">Show The Different Types of food</string>
    <string name="get_started">Get Started</string>
    <string name="create_your_plan">Create Your Plan</string>
    <string name="homenav">Home</string>
    <string name="search_nav">Search</string>
    <string name="favourite">Favourite</string>
    <string name="plan">Plan</string>
    <string name="text_meal_name">Meal Name</string>
    <string name="text_favourite">Favourite</string>
    <string name="text_steps">Steps</string>
    <string name="text_ingredients">Ingredients</string>
    <string name="text_instructions">Instructions</string>
    <string name="text_ingredient">Ingredient</string>
    <string name="text_measure">Measure</string>
    <string name="text_search">Search</string>
    <string name="hint_search">Search for your meal</string>
    <string name="text_category">Category</string>
    <string name="text_area">Area</string>
    <string name="text_list">List</string>
    <string name="food_category">Food Category</string>
    <string name="food_categories">Food Categories</string>
    <string name="search_by_area">Search By Area</string>
    <string name="slash">|</string>
    <string name="hint_select_day">Select Day</string>
    <string name="button_text_remove">Remove</string>
    <string name="string_user">User</string>
    <string name="button_text_logout">Logout</string>
</resources>