<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:title="@string/homenav"
        android:icon="@drawable/ic_baseline_home_24" />
    <item android:id="@+id/nav_search"
        android:title="@string/search_nav"
        android:icon="@drawable/ic_baseline_search_24" />
    <item android:id="@+id/nav_fav"
        android:title="@string/favourite"
        android:icon="@drawable/ic_baseline_favorite_24" />
    <item android:id="@+id/nav_plane"
        android:title="@string/plan"
        android:icon="@drawable/ic_baseline_calendar_month_24" />
    <item android:title="@string/string_user"
        android:id="@+id/nav_user"
        android:icon="@drawable/baseline_account_circle_24"/>
</menu>