<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textViewHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/have_account_text"
        android:textColor="@color/green_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/login_text"
        android:textColor="@color/green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textViewHaveAnAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewHaveAnAccount"
        app:layout_constraintTop_toTopOf="@id/textViewHaveAnAccount"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/policy_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textViewHaveAnAccount"
        app:layout_constraintTop_toBottomOf="@id/buttonGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewBackgroundSignUp"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintBottom_toTopOf="@id/buttonEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_signup" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewLogo"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/cafe_icon"
        app:layout_constraintBottom_toBottomOf="@id/imageViewBackgroundSignUp"
        app:layout_constraintEnd_toEndOf="@id/imageViewBackgroundSignUp"
        app:layout_constraintStart_toStartOf="@id/imageViewBackgroundSignUp"
        app:layout_constraintTop_toTopOf="@id/imageViewBackgroundSignUp" />

    <Button
        android:id="@+id/buttonEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/text_button_email"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/buttonGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewBackgroundSignUp" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/text_button_google"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/buttonGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonEmail" />

    <Button
        android:id="@+id/buttonGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/text_button_guest"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGoogle" />

    <TextView
        android:id="@+id/textViewSignUpNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#33000000"
        android:text="@string/sign_up_now_text"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/circleImageViewLogo"
        app:layout_constraintEnd_toEndOf="@id/imageViewBackgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/imageViewBackgroundSignUp"
        app:layout_constraintTop_toTopOf="@id/imageViewBackgroundSignUp" />

    <TextView
        android:id="@+id/textViewSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/slogan_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBackgroundSignUp"
        app:layout_constraintEnd_toEndOf="@id/imageViewBackgroundSignUp"
        app:layout_constraintStart_toStartOf="@id/imageViewBackgroundSignUp"
        app:layout_constraintTop_toBottomOf="@id/circleImageViewLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>