<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeDataActivity">

    <ImageView
        android:id="@+id/imageViewBackgroundSearch"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="-220dp"
        android:src="@drawable/background_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_search"
        android:textColor="@color/green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageViewBackgroundSearch"
        app:layout_constraintEnd_toStartOf="@+id/imageViewForkIcon"
        app:layout_constraintStart_toEndOf="@+id/imageViewDots"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <ImageView
        android:id="@+id/imageViewForkIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/fork_icon"
        app:layout_constraintBottom_toBottomOf="@id/tv_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_search" />

    <ImageView
        android:id="@+id/imageViewDots"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/dots_icon"
        app:layout_constraintBottom_toBottomOf="@id/tv_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        style="@style/customEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/hint_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackgroundSearch">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#80000000"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:gravity="center_vertical"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBackgroundSearch" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSearch">

        <RadioButton
            android:id="@+id/radioButtonCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/text_category" />

        <RadioButton
            android:id="@+id/radioButtonArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/text_area" />

        <RadioButton
            android:id="@+id/radioButtonIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/text_ingredients" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupFilter"
        tools:listitem="@layout/list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>