<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/nav_signIn"
    tools:context=".view.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="255dp"
        android:src="@drawable/food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginBottom="-60dp"
        android:elevation="80dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="60dp"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="431dp"
            android:layout_gravity="center"
            android:gravity="center|fill"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/merienda_one"
                android:hint="@string/hint_enter_email_address"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/merienda_one"
                android:hint="@string/hint_enter_password"
                android:inputType="textPassword"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_design"
                android:fontFamily="@font/merienda_one"
                android:text="@string/text_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHaveNotAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="50dp"
                    android:fontFamily="@font/merienda_one"
                    android:padding="5dp"
                    android:paddingStart="15dp"
                    android:text="@string/text_have_not_an_account"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_goSignUp"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/btn_goSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/merienda_one"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/green_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/textViewHaveNotAnAccount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/textViewHaveNotAnAccount"
                    app:layout_constraintTop_toTopOf="@id/textViewHaveNotAnAccount"
                    app:layout_constraintVertical_bias="1.0" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>